alpm-files/tests/fixtures/parser_errors/whitespace_as_path.snap
---
source: alpm-files/tests/parser_errors.rs
description: "%FILES%\nusr/\nusr/bin/\n        \nusr/bin/foo\n"
expression: error
---
Parser failed with the following error:
parse error at line 4, column 1
  |
4 |         
  | ^
invalid relative path
expected relative path not consisting of whitespaces and/or tabs
